// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. front lead one and one - medium - portrait 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 30,
      "paddingBottom": 100,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Object {
        "width": "75%",
      }
    }
  >
    <Text>
      lead
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#999999",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginTop": 0,
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": "25%",
      }
    }
  >
    <Text>
      support
    </Text>
  </View>
</View>
`;

exports[`2. front lead one and one - wide - portrait 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 30,
      "paddingBottom": 100,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Object {
        "width": "75%",
      }
    }
  >
    <Text>
      lead
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#999999",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginTop": 0,
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": "25%",
      }
    }
  >
    <Text>
      support
    </Text>
  </View>
</View>
`;

exports[`3. front lead one and one - huge - portrait 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 30,
      "paddingBottom": 100,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Object {
        "width": "75%",
      }
    }
  >
    <Text>
      lead
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#999999",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginTop": 0,
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": "25%",
      }
    }
  >
    <Text>
      support
    </Text>
  </View>
</View>
`;

exports[`4. front lead one and one - medium - landscape 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 30,
      "paddingBottom": 100,
      "paddingTop": 20,
      "width": 1000,
    }
  }
>
  <View
    style={
      Object {
        "width": "75%",
      }
    }
  >
    <Text>
      lead
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#999999",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginTop": 0,
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": "25%",
      }
    }
  >
    <Text>
      support
    </Text>
  </View>
</View>
`;

exports[`5. front lead one and one - wide - landscape 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 30,
      "paddingBottom": 100,
      "paddingTop": 20,
      "width": 1000,
    }
  }
>
  <View
    style={
      Object {
        "width": "75%",
      }
    }
  >
    <Text>
      lead
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#999999",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginTop": 0,
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": "25%",
      }
    }
  >
    <Text>
      support
    </Text>
  </View>
</View>
`;

exports[`6. front lead one and one - huge - landscape 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 30,
      "paddingBottom": 100,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Object {
        "width": "75%",
      }
    }
  >
    <Text>
      lead
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#999999",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginTop": 0,
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": "25%",
      }
    }
  >
    <Text>
      support
    </Text>
  </View>
</View>
`;
